--- a/view/object/css/style.css
+++ b/view/object/css/style.css
@@ -1,10 +1,8 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 9, 2018, 9:20:26 PM
-    Author     : DELL
-*/
+/*=====input======*/
+.myMax{
+    margin: 0 auto;
+}
 
+h1 span{
+    font: 25px fantasy;
+}
