--- a/view/object/css/style.css
+++ b/view/object/css/style.css
@@ -1,6 +1,9 @@
 /*=====input======*/
 .myMax{
     margin: 0 auto;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 h1 span{
